--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,7 @@
 
   <body>
     <%= render partial: "layouts/shared/navbar" %>
+    <%= render partial: "layouts/shared/flash" %>
     <div class ="container">
       <%= yield %>
     </div>
