--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Sign Up</h1>
+<h1>Edit Passworrd</h1>
 
-<%= form_with model: @user, url: sign_up_path do |form| %>
+<%= form_with model: Current.user, url: edit_password_path do |form| %>
     <% if form.object.errors.any? %>
         <div class="alert alert-danger">
             <% form.object.errors.full_messages.each do |message| %>
@@ -10,10 +10,6 @@
     <% end %>
 
     <div class="mb-3">
-        <%= form.label :email %>
-        <%= form.text_field :email, class: "form-control", placeholder: "gavin@hooli.com" %>
-    </div>
-    <div class="mb-3">
         <%= form.label :password %>
         <%= form.password_field :password, class: "form-control", placeholder: "PiedPiper@123" %>
     </div>
@@ -22,6 +18,6 @@
         <%= form.password_field :password_confirmation, class: "form-control", placeholder: "PiedPiper@123" %>
     </div>
     <div class="mb-3">
-        <%= form.submit "Get started!", class: "btn btn-primary" %>
+        <%= form.submit "Update Password", class: "btn btn-primary" %>
     </div>
 <% end %>
