--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,8 @@
 <div class="d-flex align-items-center justify-content-center">
   <h1>Scheduled Tweets</h1>
 </div>
+
+<div>
+  <!-- 'auth/twitter' path is maintained by OmniAuth gem -->
+  <%= button_to "Connect to X", "/auth/twitter", method: :post, data: { "turbo": false }, class: "btn btn-primary" %>
+</div>
